--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "conventionalCommits.autoCommit": false,
   "conventionalCommits.gitmoji": false,
-  "dart.flutterSdkPath": ".fvm/versions/3.19.6"
+  "dart.flutterSdkPath": ".fvm/versions/3.19.6",
+  "conventionalCommits.scopes": [
+    "auth"
+  ]
 }
