--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   mcquenji_core:
     git:
       url: https://github.com/mcquenji/mcquenji_core.git
+  firebase_auth: ^4.19.5
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   build_runner: ^2.4.9
