feat(firestore): add firestore data source

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "conventionalCommits.gitmoji": false,
   "dart.flutterSdkPath": ".fvm/versions/3.19.6",
   "conventionalCommits.scopes": [
-    "auth"
+    "auth",
+    "firestore"
   ]
 }
