refactor(all): add logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "dart.flutterSdkPath": ".fvm/versions/3.19.6",
   "conventionalCommits.scopes": [
     "auth",
-    "firestore"
+    "firestore",
+    "all"
   ]
 }
